welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:12: error: illegal start of simple expression
		if(estSurOrange){
^